[package]
name = "taranis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "chrono", "json", "registry"] }
tracing-appender = "0.2.3"
tokio-tungstenite = "0.27.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
chrono = {version = "0.4.41", features = ["serde"]}
uuid = {version = "1.17.0", features = ["serde", "v4"]}
chrono-tz = {version = "0.10.3", features = ["serde"]}
futures-util = "0.3.31"
crossterm = "0.29.0"
once_cell = "1.21.3"
